# PRO-PAD

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/app/: auth.py  config.py  main.py  models.py  schemas.py
backend/app/routers/: forecast.py  parameters.py  reports.py  scenarios.py
backend/app/services/: forecast_engine.py  reporting.py
backend/app/templates/: report.html
backend/migrations/: env.py
backend/migrations/versions/: 0001_init.py  0002_add_forecast_fields.py
backend/scripts/: seed_params.py  seed_simulation.py
backend/tests/: test_forecasting_package.py
deploy/: Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
etl/airflow/: requirements.txt
etl/airflow/dags/: propad_daily_ingest.py
etl/data/: mock_pjk05.csv  mock_realisasi_pajak.csv  mock_unit_kendaraan.csv
etl/dbt/: dbt_project.yml  profiles.yml
etl/loaders/: mock_load_internal.py
forecasting/: pyproject.toml
forecasting/forecasting/: __init__.py  backtesting.py  deterministic.py  econometric.py  model_evaluation.py  scenario.py  statistical_models.py
web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/playwright-report/: index.html
web/src/: App.tsx
web/src/components/: AssumptionCard.tsx  CompareBars.tsx  CompositionDonut.tsx  DownloadReport.tsx  ExplainPanel.tsx  JatimMap.tsx  KPI.tsx  MonthlyTrend.tsx  ParamSnapshot.tsx  ParameterInspector.tsx  ScenarioSelect.tsx  VarianceWaterfall.tsx
web/test-results/: .last-run.json
web/tests/: dashboard.spec.ts
(+11 files in other folders)
