[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propad-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]",
  "pydantic>=2.8.0",
  "SQLAlchemy>=2.0",
  "alembic",
  "psycopg[binary]",
  "python-dotenv",
  "jinja2",
  "openpyxl",
  "weasyprint",
  "prometheus-fastapi-instrumentator",
  "httpx",
  "propad-forecasting>=0.1.0"
]

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
app = ["templates/*.html"]

[tool.uvicorn]
factory = false
reload = true
